fix/adjusts
